[package]
name = "lamlock-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
lamlock = { path = "../lamlock", features = ["nightly"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_xoshiro = "0.7"
plotters = "0.3"
chrono = "0.4"
